changes to package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage":"https://evan1992.github.io/",
+  "homepage":"https://Evan1992.github.io/EchoofTime/",
   "name": "EchoofTime",
   "version": "0.1.0",
   "private": true,
